Fix spacing, feed loading icons, and tag selection

--- a/art_snob_frontend/src/App.css
+++ b/art_snob_frontend/src/App.css
@@ -1133,7 +1133,7 @@ main {
 .preference-flex {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
   width: 100%;
   height: 100%;
@@ -1145,7 +1145,6 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 50%;
   white-space: normal;
 }
 
